2006-11-03  Roger Leigh  <rleigh@debian.org>

	* debian/schroot.init: Add LSB init info and use LSB init
	functions.

	* debian/changelog: Update.

2006-10-18  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in: Fix a number of minor typos.  Thanks to
        Jens Seidel.

2006-10-18  Roger Leigh  <rleigh@debian.org>

	* dchroot/dchroot-main-base.cc: Add translator comment.

2006-10-18  Roger Leigh  <rleigh@debian.org>

	* README, schroot/schroot-setup.5.in, schroot/schroot.conf.5.in:
	Fix a number of minor typos.  Thanks to Jens Seidel.

2006-10-18  Roger Leigh  <rleigh@debian.org>

	* po/de.po: Update German translation.  Thanks to Jens Seidel.

2006-10-14  Roger Leigh  <rleigh@debian.org>

	* po/de.po: Updated German translation.  Thanks to Helge
	Kreutzmann.

2006-10-05  Luk Claes  <luk@debian.org>

	* po/vi.po: Updated Vietnamese translation.
	* po/cs.po: Updated Czech translation.

2006-10-04  Luk Claes  <luk@debian.org>

	* po/sv.po: Updated Swedish translation.

2006-10-02  Roger Leigh  <rleigh@whinlatter.ukfsn.org>

	* NEWS: Document changed syslog behaviour.

	* dchroot/dchroot-session.cc, dchroot-dsa/dchroot-dsa-session.cc
	(get_user_command): syslog logging of the command or shell being
	run in the chroot now only occurs when running as root or
	switching to another user.

2006-10-02  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.1.1.

	* NEWS: Bump version to 1.1.1.

	* configure.ac: Bump version to 1.1.1.

2006-08-25  Roger Leigh  <rleigh@debian.org>

	* Version 1.1.0

	* debian/changelog: Update for 1.1.0

	* TODO: Remove completed item.

2006-08-25  Roger Leigh  <rleigh@debian.org>

	* po/schroot.pot: Add.

2006-08-19  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document --directory.

2006-08-19  Roger Leigh  <rleigh@debian.org>

	* HACKING: Document additional directory fallback checks.

	* schroot/schroot.1.in, dchroot/dchroot.1.in,
	dchroot-dsa/dchroot-dsa.1.in: Document directory option.
